--- a/.env.template
+++ b/.env.template
@@ -7,3 +7,5 @@ STRIPE_CANCEL_URL=http://localhost:3003/payments/cancelled
 SIGNIN SECRET DE WEBHOOK
 # /https://dashboard.stripe.com/test/workbench/webhooks/we_1QJFVlFGtbg3Gj6mloo7iA5f
 STRIPE_ENDPOINT_SECRET=
+
+NATS_SERVERS="nats://localhost:4222"
